fixed a NAMESPACE error that required loading the skitools/gUtils library in order to use Covariates

--- a/Fish.hook.class.demo.ipynb
+++ b/Fish.hook.class.demo.ipynb
@@ -10,8 +10,7 @@
    "outputs": [],
    "source": [
     "## Load up Fish.hook\n",
-    "library(fishhook)\n",
-    "library(skitools)"
+    "library(fishhook)"
    ]
   },
   {
