changed aggregateTargets to return another Annotated object instead of modifying the current

--- a/Fish.hook.class.demo.ipynb
+++ b/Fish.hook.class.demo.ipynb
@@ -195,8 +195,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -341,7 +340,7 @@
    "outputs": [],
    "source": [
     "## Now lets aggregate our results by pathways:\n",
-    "anno$aggregateTargets(by = Chosen_Pathways)\n"
+    "anno2 = anno$aggregateTargets(by = Chosen_Pathways)\n"
    ]
   },
   {
@@ -353,7 +352,7 @@
    "outputs": [],
    "source": [
     "##Lets look at our aggregates:\n",
-    "anno"
+    "anno2"
    ]
   },
   {
@@ -365,7 +364,7 @@
    "outputs": [],
    "source": [
     "##Scoring:\n",
-    "score = anno$scoreTargets()"
+    "score = anno2$scoreTargets()"
    ]
   },
   {
