Added new plotting syntax to demo and fixed a minor plotting bug

--- a/Fish.hook.class.demo.ipynb
+++ b/Fish.hook.class.demo.ipynb
@@ -298,6 +298,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "## You can also set annotations by specifying the columns of your score object to annotate with\n",
+    "\n",
+    "x = score$qq_plot(columns = c(\"count\",\"q\",\"gene_name\"))\n",
+    "\n",
+    "x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -387,7 +403,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -413,6 +429,40 @@
    "outputs": [],
    "source": [
     "targets[Chosen_Pathways$KEGG_LYSINE_DEGRADATION]$gene_name\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## Another way to call the plotting fuction is to use the names of the columns:\n",
+    "\n",
+    "class(score$getAll())\n",
+    "#score$getAll()\n",
+    "\n",
+    "x = score$qq_plot(columns = c(\"count\",\"q\",\"names(Chosen_Pathways)\"))\n",
+    "\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "##Since the names(Chosen_Pathways) looks a bit funky we can use a mix of the two methods\n",
+    "\n",
+    "colnames(new_meta) = \"Pathways\"\n",
+    "x = score$qq_plot(columns = c(\"count\",\"q\"),annotations = list(new_meta))\n",
+    "\n",
+    "x"
    ]
   }
  ],
