fixed a minor bug in annotate.targets that mishandeled events with no ID column

--- a/Fish.hook.class.demo.ipynb
+++ b/Fish.hook.class.demo.ipynb
@@ -188,7 +188,20 @@
     "## annotate targets with the events data only in the eligible regions\n",
     "## Note that if you are testing and trying to get this to run,\n",
     "## Covariates add about 2 min to the run time (over a base runtime of ~ 20sec) so get rid of them if debugging\n",
-    "anno = fish$annotateTargets()\n"
+    "anno = fish$annotateTargets()\n",
+    "\n",
+    "## Note that the default annotate run mode counts each event-target intersection as 1 hit\n",
+    "## If you would like to weigh the hits such that a large hit of which only 10% spans a target contributes a count\n",
+    "## of 0.1, you can set the param weightEvents=TRUE\n",
+    "## anno = fish$annotateTargets(weightEvents = TRUE)\n",
+    "\n",
+    "## You can also choose to annotate such that each patient can contribute at most \"n\" events to each target.\n",
+    "## This is to fix some issuses that can arise when you have a few patients with a large amount of mutations \n",
+    "## in a given target.\n",
+    "## To do this set maxPtGene = n\n",
+    "## and include a column named ID in your events.\n",
+    "## events$ID = events$patient_code\n",
+    "## anno = fish$annotateTargets(maxPtGene = 1)\n"
    ]
   },
   {
