Updated the demos to include a pre-rendered version

--- a/Fish.hook.class.demo.ipynb
+++ b/Fish.hook.class.demo.ipynb
@@ -5,11 +5,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "## Load up Fish.hook\n",
     "library(fishhook)\n",
     "library(skitools)"
    ]
@@ -54,7 +53,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -94,7 +93,7 @@
    "source": [
     "## eligible contains the regions of the genome that we will whitelist for fish.hook\n",
     "## In our case, the events data comes from exon sequencing\n",
-    "## exon sequencing does not afford equal coverage throughout so we\n",
+    "## exon sequencing does not afford equal coverage throughout the genome so we\n",
     "## will want to exclude all regions of poor coverage from the analysis\n",
     "## we will do this by whitelisting only the regions of the genome that have a score of 0.80 or greater\n",
     "## eligible is a GRanges object with 2,329,621 rows and one meta data column \"score\"\n",
@@ -107,7 +106,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -132,7 +131,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -148,7 +147,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -181,28 +180,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "## annotate targets with the events data only in the eligible regions\n",
     "## Note that if you are testing and trying to get this to run,\n",
     "## Covariates add about 2 min to the run time (over a base runtime of ~ 20sec) so get rid of them if debugging\n",
-    "## anno = fish$annotateTargets()\n",
+    "##anno = fish$annotateTargets()\n",
     "\n",
     "## Note that the default annotate run mode counts each event-target intersection as 1 hit\n",
     "## If you would like to weigh the hits such that a large hit of which only 10% spans a target contributes a count\n",
     "## of 0.1, you can set the param weightEvents=TRUE\n",
-    "## anno = fish$annotateTargets(weightEvents = TRUE)\n",
+    "##anno = fish$annotateTargets(weightEvents = TRUE)\n",
     "\n",
     "## You can also choose to annotate such that each patient can contribute at most \"n\" events to each target.\n",
     "## This is to fix some issuses that can arise when you have a few patients with a large amount of mutations \n",
     "## in a given target.\n",
     "## To do this set maxPtGene = n\n",
-    "## and include a column named ID in your events. That indicates which sample/patient this event comes from\n",
-    "events$ID = events$patient_code\n",
-    "anno = fish$annotateTargets(maxPtGene = 1)\n"
+    "## and include a column named ID in your events or specify the column name using the param \"PtIDCol\".\n",
+    "## That indicates which sample/patient this event comes from\n",
+    "anno = fish$annotateTargets(maxPtGene = 1, verbose = FALSE, PtIDCol = \"patient_code\")\n"
    ]
   },
   {
@@ -214,7 +212,9 @@
    "outputs": [],
    "source": [
     "## Lets take a look at our Annotate Object\n",
-    "anno"
+    "anno\n",
+    "\n",
+    "anno$getTargets()"
    ]
   },
   {
