travis error for out.path

--- a/fishHook_Demo.ipynb
+++ b/fishHook_Demo.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "suppressWarnings(suppressMessages(library(fishhook)))\n",
+    "suppressWarnings(suppressMessages(library(fishHook)))\n",
     "suppressWarnings(suppressMessages(library(skitools)))"
    ]
   },
@@ -31,11 +31,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "setwd(\"~/git/fish.hook/data\")"
+    "setwd(\"~/git/fishHook/data\")"
    ]
   },
   {
@@ -292,7 +292,7 @@
     "## Creating Covariates\n",
     "**The following information is required when creating covariates:**\n",
     "\n",
-    "Covariate: This is meat of the object and in this case will be our replication timing object**\n",
+    "Covariate(referenced with cvs): This is meat of the object and in this case will be our replication timing object. It can be of class GRanges, character (file path), RleList or ffTrack object. In this case replication timing is a GRanges Object.**\n",
     "\n",
     "Type: There are three covariate types. Numeric, like replication timing where each region gets a numeric value assigned to it. Interval, where we indicate regions that are \"marked\" with this covariate. For example, H3K9me3. Sequence, which can be something like GC content.\n",
     "\n",
@@ -300,12 +300,11 @@
     "\n",
     "**Other Parameters that are not always required:**\n",
     "\n",
-    "Field: This is for numeric covariates and is the column name where the 'score' is held. Note that it is set to 'score by default.\n",
+    "Field: This is for numeric covariates and is the column name where the 'score' is held. Note that it is set to 'score' by default.\n",
     "\n",
     "Signature: This is only required if the Covariate you are using is an ffTrack Object, this is similar to field.\n",
     "\n",
-    "Pad: This indicates how much to the left and to the right of the covariate we should consider its influence. e.g. if a covariate was from position 100-150 with pad = 5 we would consider it for positions 95-155.\n",
-    "\n"
+    "Pad: This indicates how much to the left and to the right of the covariate we should consider its influence. e.g. if a covariate was from position 100-150 with pad = 5 we would consider it for positions 95-155.\n"
    ]
   },
   {
@@ -316,7 +315,7 @@
    },
    "outputs": [],
    "source": [
-    "rept = Cov$new(Covariate = replication_timing, type = 'numeric', name = 'rept')\n",
+    "rept = Cov_Arr$new(cvs = replication_timing, type = 'numeric', name = 'rept')\n",
     "rept"
    ]
   },
@@ -405,6 +404,28 @@
    "source": [
     "rep3$type\n",
     "rep3$signature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple Covariates\n",
+    "In the case that you want to create multiple covariates at a given time, you can pass a list of covariate tracks\n",
+    "to the cvs arguement and a vector of correct type to the other arguements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "multi_cov = Cov_Arr$new(cvs = list(replication_timing, replication_timing), name = c('replication1', 'replication2'),\n",
+    "                       type = c('numeric','numeric'), pad = c(0,20))\n",
+    "multi_cov"
    ]
   },
   {
